--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "lint:fix": "ng lint --fix",
-    "e2e": "ng e2e",
+    "e2e": "ng e2e --port 4313",
     "format:check": "prettier --config .prettierrc --list-different \"./src/**/*.{ts,js,scss,html}\"",
     "format:fix": "prettier --config .prettierrc --write \"./src/**/*.{ts,js,scss,html}\"",
     "fix": "npm run format:fix; npm run lint:fix"
